// Add changes that you do to here, as well as in the commit message. Commit message can be less specific. IE: "Added to the GamePiece, gave character functionality"
// In THIS file should be specifically what you added. IE: "Added to Gamepiece: -Character movement -Character Collisions - Character Drawing"

V1 - Initial Release
	- Project Created
	- MethodsLibrary Impelemented
		- Clamps (int, double, float, Vector2)
		- InRange (int, double, float, Vector2)

Joh 3-15-15
------------------------------------------------
Added basic object and character classes:
- Powerup
	- LongerPowerup
	- ShorterPowerup
	- SuperSaiyan
- GamePiece
	- MoveableGamePiece
		- Obstacle
		- Player

Added basic fields with properties to several classes
- Powerup.cs
	-float strength
- GamePiece.cs
	- Vector2 globalPosition
	- Vector2 localPosition (We'll have to talk about whether we still want to use this)
- MoveableGamePiece.cs
	- float speed
- Player.cs
	- float Tempurature
	- float shorts length

Have a happy day!

Ethan Nichols 3/19/2015
Added following classes:
- Sprite
- GUIObject
	- Button
	- Slider
	- Meter
=======
Joh 3/19/15
------------------------------------------------------------------------
- Added float speed and Vector2 velocity to MoveableGamepiece.cs
- Added constructors to MoveableGamePiece, Player and GamePiece
- Added method stubs to Player class for Jump, HitObstacle and PlayAnimation

Luke 3-27-15
------------------------------------------------------------------------
- Frame.cs
	- InitializeFrames() method for creating all the frames
	- Constructor (will) grab a random frame and make random obstacles
	- Position, Obstacles, enum properties