@@ -22,13 +22,21 @@ namespace Frosty_Cheeks
             set { globalPosition = value; }
         }
         private Vector2 localPosition;//Position in realtion to frame that owns this GamePiece (Not sure if we'll need this)
-        /*TODO: Will implement when Sprite class is in place
-        private Sprite sprite;
-        public SpriteObj
+        
+        private Sprite spriteObj;
+        public Sprite SpriteObj
         {
-            get { return sprite; }
-            set { sprite = value; }
-        }*/
+            get { return spriteObj; }
+            set { spriteObj = value; }
+        }
+        private Rectangle boundingBox;
+
+        public Rectangle BoundingBox
+        {
+            get { return boundingBox; }
+            set { boundingBox = value; }
+        }
+
         public GamePiece(Vector2 pos)
         {
             globalPosition = pos;
@@ -36,6 +44,19 @@ namespace Frosty_Cheeks
         public GamePiece()
         {
             globalPosition = Vector2.Zero;
+        }
+        public Rectangle GetBoundingBox(){
+            return spriteObj.SpriteRect;
+            //Added this method because MonoGame's Rectangle.Intersects doesn't let you use a property as the other Rectangle's param. See IsColliding()
+        }
+        //Checks to see if this GamePiece's sprite is colliding with another Gampiece sprite
+        public bool IsColliding(GamePiece other)
+        {
+            //Gets bounding box info from another GamePiece's sprite and uses MonoGame's built in method to check for a collision
+            bool collide = false;
+            Rectangle otherBoundingBox = other.GetBoundingBox();
+            boundingBox.Intersects(ref otherBoundingBox, out collide);
+            return collide;
         }
     }
 }
